--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,26 +47,10 @@ stages:
   - stage: Build
     dependsOn: []
     jobs:
-      # A1) Checkout, install module and build
-      - job: make_build
+      # A1) Checkout, install module and build code
+      - job: make_build      
         steps:
-        - task: Cache@2
-          inputs:
-            key: 'yarn | "$(Agent.OS)" | yarn.lock'
-            restoreKeys: |
-              yarn | "$(Agent.OS)"
-              yarn
-            path: $(YARN_CACHE_FOLDER)
-          displayName: Cache yarn packages
-
-        - script: |
-            yarn install --frozen-lockfile --no-progress --non-interactive --network-concurrency 1
-          displayName: 'Install node modules'
-
-        - bash: |
-            yarn build
-          displayName: 'Build code'
-
+        - template: azure-templates/make_build_steps.yml
 
       # A2) Analyze source code to find errors with lint
       - job: lint
