--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,22 +51,15 @@ stages:
       - job: make_build      
         steps:
         - template: azure-templates/make_build_steps.yml
-
+          parameters:
+            make: build
+            
       # A2) Analyze source code to find errors with lint
       - job: lint
-        steps:        
-        - task: Cache@2
-          inputs:
-            key: 'yarn | "$(Agent.OS)" | yarn.lock'
-            restoreKeys: |
-              yarn | "$(Agent.OS)"
-              yarn
-            path: $(YARN_CACHE_FOLDER)
-          displayName: Cache yarn packages
-
-        - script: |
-            yarn install --frozen-lockfile --no-progress --non-interactive --network-concurrency 1
-          displayName: 'Install node modules'
+        steps:
+        - template: azure-templates/make_build_steps.yml
+          parameters:
+            make: none
 
         - script: |
             yarn lint
@@ -88,18 +81,9 @@ stages:
             )
           )
         steps:
-        - task: Cache@2
-          inputs:
-            key: 'yarn | "$(Agent.OS)" | yarn.lock'
-            restoreKeys: |
-              yarn | "$(Agent.OS)"
-              yarn
-            path: $(YARN_CACHE_FOLDER)
-          displayName: Cache yarn packages
-
-        - script: |
-            yarn install --frozen-lockfile --no-progress --non-interactive --network-concurrency 1
-          displayName: 'Install node modules'
+        - template: azure-templates/make_build_steps.yml
+          parameters:
+            make: none
 
         - bash: |
             yarn danger ci
@@ -117,18 +101,9 @@ stages:
             version: $(NODE_VERSION)
           displayName: 'Set up Node.js'
 
-        - task: Cache@2
-          inputs:
-            key: 'yarn | "$(Agent.OS)" | yarn.lock'
-            restoreKeys: |
-              yarn | "$(Agent.OS)"
-              yarn
-            path: $(YARN_CACHE_FOLDER)
-          displayName: Cache yarn packages
-
-        - script: |
-            yarn install --frozen-lockfile --no-progress --non-interactive --network-concurrency 1
-          displayName: 'Install node modules'
+        - template: azure-templates/make_build_steps.yml
+          parameters:
+            make: none
 
         - script: |
             yarn test:coverage
