--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -136,45 +136,7 @@ stages:
     jobs:
       - job: deploy_to_staging
         steps:
-        - task: Cache@2
-          inputs:
-            key: 'yarn | "$(Agent.OS)" | yarn.lock'
-            restoreKeys: |
-              yarn | "$(Agent.OS)"
-              yarn
-            path: $(YARN_CACHE_FOLDER)
-          displayName: Cache yarn packages
-
-        - script: |
-            yarn install --frozen-lockfile --no-progress --non-interactive --network-concurrency 1
-          displayName: 'Install node modules'
-
-        - bash: |
-            yarn predeploy
-          displayName: 'Build deploy files'
-
-        - task: CopyFiles@2
-          inputs:
-            SourceFolder: '$(System.DefaultWorkingDirectory)'
-            TargetFolder: '$(Build.ArtifactStagingDirectory)'
-            Contents: |
-              **/*
-              !.git/**/*
-              !**/*.js.map
-              !**/*.ts
-              !.vscode/**/*
-              !local.settings.json
-              !test
-              !tsconfig.json
-          displayName: 'Copy deploy files' 
-
-        - task: ArchiveFiles@2
-          inputs:
-            rootFolderOrFile: '$(Build.ArtifactStagingDirectory)'
-            includeRootFolder: false
-            archiveType: 'zip'
-            archiveFile: '$(Build.ArtifactStagingDirectory)/package.zip'
-          displayName: 'Make deployment zip'
+        - template: azure-templates/prepare-deploy_steps.yml
 
         # c1) First option: standard deployment in STAGING env (without slots)
         - task: AzureFunctionApp@1
