prepare-deploy-steps.yml

--- a/azure-templates/prepare-deploy-steps.yml
+++ b/azure-templates/prepare-deploy-steps.yml
@@ -6,7 +6,7 @@ parameters:
   type: string
   
 steps:
-- template: ./make_build_steps.yml
+- template: ./make-build-steps.yml
   parameters:
     make: predeploy_build
 
