--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -169,83 +169,10 @@ stages:
     jobs:
       - job: deploy_to_production
         steps:
-        - task: Cache@2
-          inputs:
-            key: 'yarn | "$(Agent.OS)" | yarn.lock'
-            restoreKeys: |
-              yarn | "$(Agent.OS)"
-              yarn
-            path: $(YARN_CACHE_FOLDER)
-          displayName: Cache yarn packages
-
-        - script: |
-            yarn install --frozen-lockfile --no-progress --non-interactive --network-concurrency 1
-          displayName: 'Install node modules'
-
-        - bash: |
-            yarn predeploy
-          displayName: 'Build deploy files'
-
-        - task: CopyFiles@2
-          inputs:
-            SourceFolder: '$(System.DefaultWorkingDirectory)'
-            TargetFolder: '$(Build.ArtifactStagingDirectory)'
-            Contents: |
-              **/*
-              !.git/**/*
-              !**/*.js.map
-              !**/*.ts
-              !.vscode/**/*
-              !local.settings.json
-              !test
-              !tsconfig.json
-          displayName: 'Copy deploy files' 
-
-        - task: ArchiveFiles@2
-          inputs:
-            rootFolderOrFile: '$(Build.ArtifactStagingDirectory)'
-            includeRootFolder: false
-            archiveType: 'zip'
-            archiveFile: '$(Build.ArtifactStagingDirectory)/package.zip'
-          displayName: 'Make deployment zip'
-
-        # d1) First option: standard deployment in PROD (without swapping slots)
-        - task: AzureFunctionApp@1
-          condition: and(succeeded(), ne(variables['DEPLOY_TO_SLOT'], True))
-          inputs:
-            azureSubscription: '$(PRODUCTION_AZURE_SUBSCRIPTION)'
-            resourceGroupName: '$(PRODUCTION_RESOURCE_GROUP_NAME)'
-            appType: 'functionApp'
-            appName: '$(PRODUCTION_FUNCTION_APP_NAME)'
-            package: '$(Build.ArtifactStagingDirectory)/package.zip'
-            deploymentMethod: 'auto'
-          displayName: Deploy to production env
-
-        # d2) Alternative option: deployment in PROD using slots.
-
-        # d2-I) Deployment to 'staging' slot in PROD environment.
-        # Note. The deployment to 'staging' slot is done to be sure that the code
-        # tagged 'latest' is the ones that will be swapped to be deployed in Prod...
-        - task: AzureFunctionApp@1
-          condition: and(succeeded(), eq(variables['DEPLOY_TO_SLOT'], True))
-          inputs:
-            azureSubscription: '$(PRODUCTION_AZURE_SUBSCRIPTION)'
-            resourceGroupName: '$(PRODUCTION_RESOURCE_GROUP_NAME)'
-            appType: 'functionApp'
-            appName: '$(PRODUCTION_FUNCTION_APP_NAME)'
-            package: '$(Build.ArtifactStagingDirectory)/package.zip'
-            deploymentMethod: 'auto'
-            deployToSlotOrASE: true
-            slotName: 'staging'
-          displayName: Deploy to staging slot
-
-        # d2-II) Swap 'staging' with 'production' slot in PROD env.
-        - task: AzureAppServiceManage@0
-          condition: and(succeeded(), eq(variables['DEPLOY_TO_SLOT'], True))
-          inputs:
-            azureSubscription: '$(PRODUCTION_AZURE_SUBSCRIPTION)'
-            WebAppName: '$(PRODUCTION_FUNCTION_APP_NAME)'
-            ResourceGroupName: '$(PRODUCTION_RESOURCE_GROUP_NAME)'
-            SourceSlot: staging
-            SwapWithProduction: true
-          displayName: Swap with production slot
+        # Make the build, prepare the package and deploy
+        - template: azure-templates/deploy-steps.yml
+          parameters:
+            deployToSlot: $(DEPLOY_TO_SLOT)
+            azureSubscription: $(PRODUCTION_AZURE_SUBSCRIPTION)
+            resourceGroupName: $(PRODUCTION_RESOURCE_GROUP_NAME)
+            appName: $(PRODUCTION_FUNCTION_APP_NAME)
