--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -139,10 +139,10 @@ stages:
         # Make the build, prepare the package and deploy
         - template: azure-templates/deploy-steps.yml
           parameters:
-            deployToSlot: $(DEPLOY_TO_SLOT)
-            azureSubscription: $(STAGING_AZURE_SUBSCRIPTION)
-            resourceGroupName: $(STAGING_RESOURCE_GROUP_NAME)
-            appName: $(STAGING_FUNCTION_APP_NAME)
+            deployToSlot: '$(DEPLOY_TO_SLOT)'
+            azureSubscription: '$(STAGING_AZURE_SUBSCRIPTION)'
+            resourceGroupName: '$(STAGING_RESOURCE_GROUP_NAME)'
+            appName: '$(STAGING_FUNCTION_APP_NAME)'
 
 
   # D) Deploy to PRODUCTION only if the 'latest' tag is pushed.
@@ -172,7 +172,7 @@ stages:
         # Make the build, prepare the package and deploy
         - template: azure-templates/deploy-steps.yml
           parameters:
-            deployToSlot: $(DEPLOY_TO_SLOT)
+            deployToSlot: '$(DEPLOY_TO_SLOT)'
             azureSubscription: $(PRODUCTION_AZURE_SUBSCRIPTION)
             resourceGroupName: $(PRODUCTION_RESOURCE_GROUP_NAME)
             appName: $(PRODUCTION_FUNCTION_APP_NAME)
