--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -139,7 +139,7 @@ stages:
         # Make the build, prepare the package and deploy
         - template: azure-templates/deploy-steps.yml
           parameters:
-            deployToSlot: '$(DEPLOY_TO_SLOT)'
+            deployToSlot: 'false'
             azureSubscription: '$(STAGING_AZURE_SUBSCRIPTION)'
             resourceGroupName: '$(STAGING_RESOURCE_GROUP_NAME)'
             appName: '$(STAGING_FUNCTION_APP_NAME)'
