--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -139,7 +139,7 @@ stages:
         # Make the build, prepare the package and deploy
         - template: azure-templates/deploy-steps.yml
           parameters:
-            deployToSlot: 'false'
+            deployType: $(DEPLOY_TYPE)
             azureSubscription: '$(STAGING_AZURE_SUBSCRIPTION)'
             resourceGroupName: '$(STAGING_RESOURCE_GROUP_NAME)'
             appName: '$(STAGING_FUNCTION_APP_NAME)'
@@ -172,7 +172,7 @@ stages:
         # Make the build, prepare the package and deploy
         - template: azure-templates/deploy-steps.yml
           parameters:
-            deployToSlot: eq(variables['DEPLOY_TO_SLOT)'], true)
+            deployType: $(DEPLOY_TYPE)
             azureSubscription: '$(PRODUCTION_AZURE_SUBSCRIPTION)'
             resourceGroupName: '$(PRODUCTION_RESOURCE_GROUP_NAME)'
             appName: '$(PRODUCTION_FUNCTION_APP_NAME)'
