--- a/azure-templates/make-build-steps.yml
+++ b/azure-templates/make-build-steps.yml
@@ -1,20 +1,20 @@
-# Azure DevOps pipeline template used to checkout the code and install all node dependencies. 
+# Azure DevOps pipeline template used to checkout, install node dependencies and build the code. 
   
 parameters:
 - name: 'make'
-  default: none
+  default: 'install_dependencies'
   type: string
   values:
-  - build
-  - predeploy_build
-  - none
+  - 'install_dependencies'
+  - 'build'
+  - 'predeploy_build'
   
 steps:
 - checkout: self
   displayName: 'Checkout'
       
 - task: Cache@2
-  inputs:
+  inputs:_only
     key: 'yarn | "$(Agent.OS)" | yarn.lock'
     restoreKeys: |
       yarn | "$(Agent.OS)"
@@ -26,10 +26,10 @@ steps:
     yarn install --frozen-lockfile --no-progress --non-interactive --network-concurrency 1
   displayName: 'Install node modules'
 
-- ${{ if eq(parameters.make, 'predeploy_build') }}:
-  - bash: yarn predeploy
-    displayName: 'Predeploy build code'
-
 - ${{ if eq(parameters.make, 'build') }}:
   - bash: yarn build
     displayName: 'Build code'
+
+- ${{ if eq(parameters.make, 'predeploy_build') }}:
+  - bash: yarn predeploy
+    displayName: 'Predeploy build code'
