--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,14 +52,14 @@ stages:
         steps:
         - template: azure-templates/make-build-steps.yml
           parameters:
-            make: 'build'
+            make: build
             
       # A2) Analyze source code to find errors with lint
       - job: lint
         steps:
         - template: azure-templates/make-build-steps.yml
           parameters:
-            make: 'install_dependencies'
+            make: install_dependencies
 
         - script: |
             yarn lint
@@ -83,7 +83,7 @@ stages:
         steps:
         - template: azure-templates/make-build-steps.yml
           parameters:
-            make: 'install_dependencies'
+            make: install_dependencies
 
         - bash: |
             yarn danger ci
@@ -103,7 +103,7 @@ stages:
 
         - template: azure-templates/make-build-steps.yml
           parameters:
-            make: 'install_dependencies'
+            make: install_dependencies
 
         - script: |
             yarn test:coverage
