--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -135,12 +135,14 @@ stages:
     jobs:
       - job: deploy_to_staging
         steps:
+        # Make the build, prepare the package and deploy
         - template: azure-templates/deploy-steps.yml
           parameters:
-            deployType: '$(STAGING_DEPLOY_TYPE)'
             azureSubscription: '$(STAGING_AZURE_SUBSCRIPTION)'
             resourceGroupName: '$(STAGING_RESOURCE_GROUP_NAME)'
             appName: '$(STAGING_FUNCTION_APP_NAME)'
+            deployType: '$(STAGING_DEPLOY_TYPE)'
+
 
 
   # D) Deploy to PRODUCTION only if the 'latest' tag is pushed.
