--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,9 +2,11 @@
 #
 # The following variables needs to be defined before running the deployment jobs 
 # defined in this pipeline:
+# - STAGING_DEPLOY_TYPE
 # - STAGING_AZURE_SUBSCRIPTION
 # - STAGING_RESOURCE_GROUP_NAME
 # - STAGING_FUNCTION_APP_NAME
+# - PRODUCTION_DEPLOY_TYPE
 # - PRODUCTION_AZURE_SUBSCRIPTION
 # - PRODUCTION_RESOURCE_GROUP_NAME
 # - PRODUCTION_FUNCTION_APP_NAME
@@ -12,7 +14,6 @@
 # To enable the deployment and define if using deployment slots you also need to 
 # configure these variables:
 # - DO_DEPLOY: if False or undefined all deployments are skipped
-# - DEPLOY_TO_SLOT: if True the deployment to slot is performed
 
 variables:
   NODE_VERSION: '10.14.1'
@@ -138,11 +139,10 @@ stages:
         # Make the build, prepare the package and deploy
         - template: azure-templates/deploy-steps.yml
           parameters:
+            deployType: '$(STAGING_DEPLOY_TYPE)'
             azureSubscription: '$(STAGING_AZURE_SUBSCRIPTION)'
             resourceGroupName: '$(STAGING_RESOURCE_GROUP_NAME)'
             appName: '$(STAGING_FUNCTION_APP_NAME)'
-            deployType: '$(STAGING_DEPLOY_TYPE)'
-
 
 
   # D) Deploy to PRODUCTION only if the 'latest' tag is pushed.
@@ -172,7 +172,7 @@ stages:
         # Make the build, prepare the package and deploy
         - template: azure-templates/deploy-steps.yml
           parameters:
-            deployType: 'deployToProductionSlot'
+            deployType: '$(PRODUCTION_DEPLOY_TYPE)'
             azureSubscription: '$(PRODUCTION_AZURE_SUBSCRIPTION)'
             resourceGroupName: '$(PRODUCTION_RESOURCE_GROUP_NAME)'
             appName: '$(PRODUCTION_FUNCTION_APP_NAME)'
