--- a/azure-templates/deploy-steps.yml
+++ b/azure-templates/deploy-steps.yml
@@ -8,7 +8,10 @@ parameters:
 - name: 'deployType'
   type: string
   default: deployToProductionSlot
-
+  values:
+  - deployToProductionSlot
+  - deployToStagingSlot
+  - deployToStagingSlotAndSwap
 
 - name: 'archiveFileName'
   type: string
