--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -143,7 +143,7 @@ stages:
         # Make the build, prepare the package and deploy
         - template: azure-templates/deploy-steps.yml
           parameters:
-            deployType: deployToProductionSlot
+            deployType: '$(PRODUCTION_DEPLOY_TYPE)'
             azureSubscription: '$(STAGING_AZURE_SUBSCRIPTION)'
             resourceGroupName: '$(STAGING_RESOURCE_GROUP_NAME)'
             appName: '$(STAGING_FUNCTION_APP_NAME)'
