--- a/azure-templates/deploy-steps.yml
+++ b/azure-templates/deploy-steps.yml
@@ -36,13 +36,13 @@ steps:
     echo 'deployType: ${{ parameters.deployType }}'
     echo 'azureSubscription: ${{ parameters.azureSubscription }}'
   displayName: 'ECHO 2'  
-  condition: and(succeeded(), eq(${{ parameters.deployType }}, 'deployToProductionSlot'))
+  condition: and(succeeded(), eq('${{ parameters.deployType }}', 'deployToProductionSlot'))
 
 - bash: |
     echo 'deployType: ${{ parameters.deployType }}'
     echo 'azureSubscription: ${{ parameters.azureSubscription }}'
   displayName: 'ECHO 3'  
-  condition: and(succeeded(), eq(${{ parameters.deployType }}, 'deployToStagingSlotAndSwap'))
+  condition: and(succeeded(), eq('${{ parameters.deployType }}', 'deployToStagingSlotAndSwap'))
 
 
 
