--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -121,8 +121,8 @@ stages:
   # C) Deploy to STAGE environment only if there is a push on 'master' branch.
   # Other conditions based on variables settings:
   # - if $DO_DEPLOY != True (or undefined) skip deployment, otherwise:
-  #   - c1) $DEPLOY_TO_SLOT != True (or undefined): deploy to STAGE environment
-  #   - c2) $DEPLOY_TO_SLOT == True: deploy to staging slot in STAGE environment
+  #   - c1) $STAGING_DEPLOY_TYPE != deployToStagingSlotAndSwap (or undefined): deploy to prodution slot
+  #   - c2) $STAGING_DEPLOY_TYPE == deployToStagingSlotAndSwap: deploy to staging slot and then swap
   - stage: Deploy_staging
     condition: and(
         succeeded(),
@@ -138,12 +138,24 @@ stages:
     #- Build
     #- Test
     jobs:
-      - job: deploy_to_staging
+      # Option 1: deploy directly to production slot
+      - job: deploy_directly
+        condition: and(succeeded(), ne(variables['STAGING_DEPLOY_TYPE'], 'deployToStagingSlotAndSwap'))
         steps:
-        # Make the build, prepare the package and deploy
         - template: azure-templates/deploy-steps.yml
           parameters:
-            deployType: '$(STAGING_DEPLOY_TYPE)'
+            deployType: 'deployToProductionSlot'
+            azureSubscription: '$(STAGING_AZURE_SUBSCRIPTION)'
+            resourceGroupName: '$(STAGING_RESOURCE_GROUP_NAME)'
+            appName: '$(STAGING_FUNCTION_APP_NAME)'
+
+      # Option 2: deploy to staging slot and then swap with 'production'
+      - job: deploy_to_slots
+        condition: and(succeeded(), eq(variables['STAGING_DEPLOY_TYPE'], 'deployToStagingSlotAndSwap'))
+        steps:
+        - template: azure-templates/deploy-steps.yml
+          parameters:
+            deployType: 'deployToStagingSlotAndSwap'
             azureSubscription: '$(STAGING_AZURE_SUBSCRIPTION)'
             resourceGroupName: '$(STAGING_RESOURCE_GROUP_NAME)'
             appName: '$(STAGING_FUNCTION_APP_NAME)'
