--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,15 +2,12 @@
 #
 # The following variables needs to be defined before running the deployment jobs 
 # defined in this pipeline:
-# - STAGING_DEPLOY_TYPE:
-#     deployToProductionSlot
-#     deployToStagingSlot
-#     deployToStagingSlotAndSwap
+# - STAGING_DEPLOY_TYPE: 'deployToProductionSlot' || 'deployToStagingSlotAndSwap'
 # - STAGING_AZURE_SUBSCRIPTION
 # - STAGING_RESOURCE_GROUP_NAME
 # - STAGING_FUNCTION_APP_NAME
 # 
-# - PRODUCTION_DEPLOY_TYPE
+# - PRODUCTION_DEPLOY_TYPE: 'deployToProductionSlot' || 'deployToStagingSlotAndSwap'
 # - PRODUCTION_AZURE_SUBSCRIPTION
 # - PRODUCTION_RESOURCE_GROUP_NAME
 # - PRODUCTION_FUNCTION_APP_NAME
@@ -121,8 +118,9 @@ stages:
   # C) Deploy to STAGE environment only if there is a push on 'master' branch.
   # Other conditions based on variables settings:
   # - if $DO_DEPLOY != True (or undefined) skip deployment, otherwise:
-  #   - c1) $STAGING_DEPLOY_TYPE != deployToStagingSlotAndSwap (or undefined): deploy to prodution slot
-  #   - c2) $STAGING_DEPLOY_TYPE == deployToStagingSlotAndSwap: deploy to staging slot and then swap
+  #   - c1) $STAGING_DEPLOY_TYPE != deployToStagingSlotAndSwap (or undef): deploy to 'prodution' slot
+  #   - c2) $STAGING_DEPLOY_TYPE == deployToStagingSlotAndSwap: deploy to 'staging' slot in PROD and 
+  #         then swap 'staging' slot with 'production' slot
   - stage: Deploy_staging
     condition: and(
         succeeded(),
@@ -138,7 +136,7 @@ stages:
     #- Build
     #- Test
     jobs:
-      # Option 1: deploy directly to production slot
+      # Option 1: deploy directly to 'production' slot
       - job: deploy_directly
         condition: and(succeeded(), ne(variables['STAGING_DEPLOY_TYPE'], 'deployToStagingSlotAndSwap'))
         steps:
@@ -149,7 +147,7 @@ stages:
             resourceGroupName: '$(STAGING_RESOURCE_GROUP_NAME)'
             appName: '$(STAGING_FUNCTION_APP_NAME)'
 
-      # Option 2: deploy to staging slot and then swap with 'production'
+      # Option 2: deploy to staging slot and then swap with 'production' slot
       - job: deploy_to_slots
         condition: and(succeeded(), eq(variables['STAGING_DEPLOY_TYPE'], 'deployToStagingSlotAndSwap'))
         steps:
@@ -164,9 +162,9 @@ stages:
   # D) Deploy to PRODUCTION only if the 'latest' tag is pushed.
   # Other conditions based on variables settings:
   # - if $DO_DEPLOY != True (or undefined) skip deployment, otherwise:
-  #   - d1) $DEPLOY_TO_SLOT != True (or undefined): deploy to PROD environment
-  #   - d2) $DEPLOY_TO_SLOT == True: deploy to 'staging' slot in PROD environment
-  #         and then swap 'staging' slot with 'production' slot
+  #   - c1) $PRODUCTION_DEPLOY_TYPE != deployToStagingSlotAndSwap (or undef): deploy to 'prodution' slot
+  #   - c2) $PRODUCTION_DEPLOY_TYPE == deployToStagingSlotAndSwap: deploy to 'staging' slot in PROD and 
+  #         then swap 'staging' slot with 'production' slot
   - stage: Deploy_production
     condition: and(
         succeeded(),
@@ -183,12 +181,24 @@ stages:
     - Build
     - Test
     jobs:
-      - job: deploy_to_production
+      # Option 1: deploy directly to 'production' slot
+      - job: deploy_directly
+        condition: and(succeeded(), ne(variables['PRODUCTION_DEPLOY_TYPE'], 'deployToStagingSlotAndSwap'))
         steps:
-        # Make the build, prepare the package and deploy
         - template: azure-templates/deploy-steps.yml
           parameters:
-            deployType: '$(PRODUCTION_DEPLOY_TYPE)'
+            deployType: 'deployToProductionSlot'
+            azureSubscription: '$(PRODUCTION_AZURE_SUBSCRIPTION)'
+            resourceGroupName: '$(PRODUCTION_RESOURCE_GROUP_NAME)'
+            appName: '$(PRODUCTION_FUNCTION_APP_NAME)'
+
+      # Option 2: deploy to staging slot and then swap with 'production' slot
+      - job: deploy_to_slots
+        condition: and(succeeded(), eq(variables['PRODUCTION_DEPLOY_TYPE'], 'deployToStagingSlotAndSwap'))
+        steps:
+        - template: azure-templates/deploy-steps.yml
+          parameters:
+            deployType: 'deployToStagingSlotAndSwap'
             azureSubscription: '$(PRODUCTION_AZURE_SUBSCRIPTION)'
             resourceGroupName: '$(PRODUCTION_RESOURCE_GROUP_NAME)'
             appName: '$(PRODUCTION_FUNCTION_APP_NAME)'
