--- a/azure-templates/deploy-steps.yml
+++ b/azure-templates/deploy-steps.yml
@@ -2,16 +2,17 @@
 #
 # Note. Deployment slots let you deploy different versions of your function
 # app to different URLs. You can test a certain version and then swap content
-# and configuration between slots.
+# and configuration between slots to have minimal impact to production and also 
+# make rollback easily.
 
 parameters:
 - name: 'deployType'
   type: string
   default: deployToProductionSlot
-
-- name: 'archiveFileName'
-  type: string
-  default: 'package.zip'
+  values:
+  - deployToProductionSlot
+  - deployToStagingSlotAndSwap
+  - deployToStagingSlot  
 
 - name: 'azureSubscription'
   type: string
@@ -26,29 +27,9 @@ parameters:
   default: ''
   
 steps:
-- bash: |
-    echo 'deployType: ${{ parameters.deployType }}'
-    echo 'azureSubscription: ${{ parameters.azureSubscription }}'
-  displayName: 'ECHO'
-  
-  
-- bash: |
-    echo 'deployType: ${{ parameters.deployType }}'
-    echo 'azureSubscription: ${{ parameters.azureSubscription }}'
-  displayName: 'ECHO 2'  
-  condition: and(succeeded(), eq('${{ parameters.deployType }}', 'deployToProductionSlot'))
-
-- bash: |
-    echo 'deployType: ${{ parameters.deployType }}'
-    echo 'azureSubscription: ${{ parameters.azureSubscription }}'
-  displayName: 'ECHO 3'  
-  condition: and(succeeded(), eq('${{ parameters.deployType }}', 'deployToStagingSlotAndSwap'))
-
-
-
-- template: ./make-build-steps.yml
+- template: ./prepare-deploy-steps.yml
   parameters:
-    make: predeploy_build
+    zipFileName: package.zip
 
 - task: CopyFiles@2
   inputs:
@@ -83,9 +64,9 @@ steps:
       appName: '${{ parameters.appName }}'
       package: '$(Build.ArtifactStagingDirectory)/${{ parameters.archiveFileName }}'
       deploymentMethod: 'auto'
-    displayName: Standard deploy
+    displayName: Direct deploy
 
-# Option 2: deployment to 'staging' slot only
+# Option 2: deployment to 'staging' slot only (not used)
 - ${{ if eq(parameters.deployType, 'deployToStagingSlot') }}:
   - task: AzureFunctionApp@1
     inputs:
